# Krayon

./: .gitignore  __init__.py  builder.py  pastel.py  pastel.template  pyproject.toml  readme.md  templates.py
generator/: pastel.pre.py
krayon/: __init__.py  ansi.py  builder.py  krayon.py  templates.py
krayon/generator/: krayon.pre.py
pastel/: __init__.py  builder.py  pastel2.py
pastelproj/: ansi.py  pastel2.py  readme.md  templates.py
pastelproj/generator/: pastel.pre.py
